#############################################################################
BETA PUBLIC RELEASE VERSION 1.4.1       8-20-09
#############################################################################
 - NEW FEATURES
  * Disabled Typemap output by default, added --typemap flag to create 
    typemap output if needed.
  * Enabled "Create APBS Input File" by default on the web server, so that 
    APBS calculation and visualization are more obvious to the users.
  * Added warnings to stderr and the REMARK field in the output PQR file 
    regarding multiple occupancy entries in PDB file.
  * Added more informative messages in REMARK field, explaining why PDB2PQR
    was unable to assign charges to certain atoms.
  * Updated structures.py, now PDB2PQR keeps the insertion codes from PDB 
    files.
  * Added "make test-long", which runs PDB2PQR on a long list (249) of PDBs
    by default, it is also possible to let it run on specified number of 
    PDBs, e.g.,  export TESTNUM=50; make test-long . 
  * Updated NBCR opal service urls from http://ws.nbcr.net/opal/... to 
    http://ws.nbcr.net/opal2/...
  * Compressed APBS OpenDX output files in zip format, so that users can 
    download zip files from the web server.
  * Removed "EXPERIMENTAL" from APBS web solver interface and Jmol 
    visualization interface.
  * Updated all APBS related urls from http://apbs.sourceforge.net/... to
    http:/apbs.wustl.edu/...
  * Merged PDB2PKA code, PDB2PKA is functional now.
  * Added two new options: --neutraln and --neutralc, so that users can 
    manually make the N-termini or C-termini of their proteins neutral.    
  * Added a local-test, which addresses the issue of Debian-like Linux
    distros not allowing fetching PDBs from the web.
  * Added deprotonated Arginine form for post-PROPKA routines. This only 
    works for PARSE forcefield as other forcefields lack deprotonated ARG
    parameters.

 - BUG FIXES